--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="jsf_weizj">
+    <wb-module deploy-name="Zhanghongfei_store">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="jsf_weizj"/>
-        <property name="java-output-path" value="/jsf_weizj/build/classes"/>
+        <property name="java-output-path" value="/Zhanghongfei_store/build/classes"/>
+        <property name="context-root" value="Zhanghongfei_store"/>
     </wb-module>
 </project-modules>
